<resources>
    <string name="app_name">BRQMotorsECC</string>
    <string name="intro_fragment1_title">"Bem Vindo"</string>
    <string name="intro_fragment2_title">"Escolha um veículo"</string>
    <string name="intro_fragment3_title">"Deixe como favorito"</string>
    <string name="next">"Next"</string>
    <string name="textos">Coventry is a city with a thousand years of history that has plenty to offer the visiting tourist.</string>

    <string name="textView">BRQ</string>
    <string name="textViewAPP">Seu App de Viagens</string>
    <string name="Login_Email">Email</string>
    <string name="Login_Senha">Senha</string>
    <string name="btn_Login">Login</string>
    <string name="label">Não tem conta? Se Cadastre</string>
    <string name="imagem_app">Imagem mulher dirigindo</string>
    <string name="txt_Brq">Brq</string>
    <string name="txt_app_de_viagens">Texto seu app de viagens</string>
    <string name="icone_Brq">Icone brq</string>
    <string name="login_email">Campo email</string>
    <string name="login_password">Campo senha</string>
    <string name="btn_login">Botao login</string>
    <string name="label_cadastre">Nao tem conta? Se cadastre</string>
    <string name="btn_privacidade">CONTINUAR</string>
    <string name="txt_Permitirlocalizacao">Permitir acesso a sua localização</string>
    <string name="txt_Permitirajuda">Precisamos disso para ajudar nas suas escolhas</string>
    <string name="txt_ReadMore"><u>READ MORE</u></string>
    <string name="txt_PermitirEmail">Deseja receber emails</string>
    <string name="txt_PermitirSpam">Podemos encher sua caixa de emails com spams?</string>
    <string name="txt_Privacidade">Privacidade</string>

    <string name="read_more">READ MORE</string>

</resources>