<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/txt_Privacidade"
        android:paddingStart="@dimen/padding16"
        android:paddingTop="@dimen/padding43"
        android:paddingEnd="@dimen/padding16"
        android:paddingBottom="@dimen/padding4"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/txt_Privacidade"
        app:titleTextAppearance="@style/PrivacyToolbar"
        app:titleTextColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/container_azul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/defaut_margin_111"
        android:layout_marginEnd="@dimen/defaut_margin_16"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/default_radius"
        app:layout_constraintBottom_toTopOf="@+id/container_roxo"
        app:layout_constraintTop_toBottomOf="@id/view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="@dimen/defaut_margin_width_179"
                android:layout_height="@dimen/defaut_margin_height_45"
                android:layout_marginStart="@dimen/defaut_margin_22"
                android:layout_marginTop="@dimen/defaut_margin_15"
                android:layout_marginEnd="@dimen/defaut_margin_169"
                android:layout_marginBottom="@dimen/defaut_margin_btn_100"
                android:text="@string/txt_Permitirlocalizacao"
                android:textColor="@color/white"
                android:textSize="@dimen/txtsize_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="@dimen/txt_input_311"
                android:layout_height="@dimen/txt_input_height_18"
                android:layout_marginStart="@dimen/defaut_margin_22"
                android:layout_marginTop="@dimen/defaut_margin_75"
                android:layout_marginEnd="@dimen/defat_margin_26"
                android:layout_marginBottom="@dimen/defaut_mardin_67"
                android:text="@string/txt_Permitirajuda"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_13"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/defaut_margin_295"
                android:layout_marginTop="@dimen/defaut_margin_15"
                android:layout_marginEnd="@dimen/defaut_margin_36"
                android:layout_marginBottom="@dimen/defaut_margin_btn_118"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="@dimen/txt_view_width_93"
                android:layout_height="@dimen/txt_input_height"
                android:layout_marginStart="@dimen/defaut_margin_22"
                android:layout_marginTop="@dimen/defaut_margin_115"
                android:layout_marginEnd="@dimen/defaut_margin_255"
                android:layout_marginBottom="@dimen/defaut_margin_25"
                android:autoLink="all"
                android:clickable="true"
                android:text="@string/txt_ReadMore"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_13"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/container_roxo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view_height_164"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/defaut_margin_15"
        android:layout_marginEnd="@dimen/defaut_margin_16"
        app:cardBackgroundColor="@color/card_purple_bg"
        app:cardCornerRadius="@dimen/default_radius"
        app:layout_constraintTop_toBottomOf="@id/container_azul">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_container_azul"
                android:layout_width="@dimen/txt_input_311"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/defaut_margin_22"
                android:layout_marginTop="@dimen/defaut_margin_72"
                android:layout_marginEnd="@dimen/defat_margin_26"
                android:layout_marginBottom="@dimen/defaut_margin_70"
                android:text="@string/txt_PermitirSpam"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_13"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="@dimen/txt_input_red_more"
                android:layout_height="@dimen/txt_input_height"
                android:layout_marginStart="@dimen/txt_input_height"
                android:layout_marginTop="@dimen/defaut_margin_124"
                android:layout_marginEnd="@dimen/defaut_margin_276"
                android:layout_marginBottom="@dimen/defaut_margin_16"
                android:text="READ MORE"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_13"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:layout_width="@dimen/txt_input_width_192"
                android:layout_height="@dimen/txt_input_hight_45"
                android:layout_marginStart="@dimen/defat_margin_26"
                android:layout_marginTop="@dimen/defaut_margin_15"
                android:layout_marginEnd="@dimen/defaut_margin_152"
                android:layout_marginBottom="@dimen/defaut_margin_btn_100"
                android:text="@string/txt_PermitirEmail"
                android:textColor="@color/white"
                android:textSize="@dimen/txtsize_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/defaut_margin_295"
                android:layout_marginTop="@dimen/defaut_margin_15"
                android:layout_marginEnd="@dimen/defaut_margin_36"
                android:layout_marginBottom="@dimen/defaut_margin_btn_118"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_30"
        android:background="@drawable/background_buttonpriva"
        android:hint="@string/btn_privacidade"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_roxo" />

</androidx.constraintlayout.widget.ConstraintLayout>